Generally styled main section with cards including left trending and announcments sections. ||Need to fix overflow and correct positioning in the main section as well as finish overall coloring and cosmetics

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,6 @@ body {
     font-size: 15px;
 }
  
-
 .header .bottom .buttons {
     display: flex;
     list-style: none;
@@ -108,7 +107,7 @@ body {
     border-style:inherit;
     background-color: rgb(90, 90, 240);
 }
-/* ----------------------------------------------------- */
+/* ------------------DASHBOARD----------------------------------- */
 
 .dashboard {
     grid-row-start: 1;
@@ -116,7 +115,7 @@ body {
     background-color: lightblue;
     display: flex;
     flex-direction: column;
-    gap: 50px;
+    gap: 60px;
     padding: 20px;
 }
 
@@ -140,40 +139,143 @@ body {
     padding-left: 0;
 }
 
-.dashboard .list1
-
-.dashboard img{
-    width:30px;
-    height:30px;
+.dashboard .list1 img {
+    width:33px;
+    height: 33px;
 }
 
+.dashboard .list2 img {
+    width:33px;
+    height: 33px;
+}
 
+.list1, .list2 {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
 
+a {
+    text-decoration: none;
+    color: black;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* -----------------------MAIN + LEFT MAIN CARDS----------------------------------- */
 
 .main {
-    /* border: solid; */
     grid-row-start: 2;
     grid-row-end: 4;
-    background-color: lightgray;
+    background-color: rgb(245, 245, 245);
+    display: flex;
 }
+
+.left-cards {
+    /* border-right: solid;  */
+    /* display: flex;
+    flex-direction: column; */
+    padding: 30px;
+    width: 65%;
+}
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 50px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    border-radius: 8px;
+    border-style: inherit;
+    border-left-style: solid;
+    border-left-width: 5px;
+    border-left-color: orange;
+    background-color: white;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 20px;
+}
+
+.icons {
+    display: flex;
+    align-self: flex-end;
+    gap: 15px;
+}
+
+.icons img {
+    width: 30px;
+    height: 30px;
+}
+
+.card h1 {
+    font-size: 20px;
+}
+
+/* ------------------------RIGHT CARDS---------------------------- */
+.right-cards{
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.right-stacked-cards {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    margin: 0;
+}
+
+.announcments {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width:50%;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.announcments .announcment {
+    border-bottom: solid;
+    border-width: 1px;
+}
+
+.announcment {
+    padding: 20px;
+}
+
+.announcment h1{
+    font-size: 20px;
+}
+
+#no-bottom-border {
+    border-bottom-width: 0;
+}
+
+.trend img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+}
+
+.trend {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.trending {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    background-color: white;
+    width:50%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 8px;
+    padding: 20px;
+}
+
 
 
 
